# marketing-adk-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
marketing_agent/: __init__.py  agent.py
